style.css
/* ... */
.content-box-module--tweet .tweet-block {
  margin: 0;
  width: 95%; }
  @media (min-width: 350px) {
    .content-box-module--tweet .tweet-block {
      width: 75%; } }
  @media (min-width: 768px) {
    .content-box-module--tweet .tweet-block {
      left: 0;
      position: absolute;
      top: 100%;
      width: 100%; } }
  @media (min-width: 992px) {
    .content-box-module--tweet .tweet-block {
      left: auto;
      top: 360px;
      right: -147px;
      width: 400px; } }
  @media (min-width: 1220px) {
    .content-box-module--tweet .tweet-block {
      right: -180px; } }
  .content-box-module--tweet .tweet-block .visible-mobile {
    width: 75%; }

/*--------------------------------------------------------------
# Typography
--------------------------------------------------------------*/
/*--------------------------------------------------------------
# Structure
--------------------------------------------------------------*/
#main.main-content, .category #main, .tax-issuem_issue_categories #main {
  padding-top: 30px; }
  @media screen and (min-width: 1220px) {
    #main.main-content, .category #main, .tax-issuem_issue_categories #main {
      padding: 45px 60px;
      margin-bottom: 60px; } }

@media (min-width: 992px) {
  #main.full-width-content {
    padding-top: 150px; } }

#main.full-width-content .footer-wrap {
  margin-top: 0; }

#main.full-width-content .breaker {
  margin-bottom: 0; }

.page-template-landing-page-full-width #main {
  padding: 0; }

.page-template-landing-page .edit-link, .page-template-submenu .edit-link, .newsletter-header-enabled.tax-issuem_issue .edit-link, .newsletter-header-enabled.tax-issuem_issue_categories .edit-link, .newsletter-header-enabled.single-article .edit-link, .newsletter-header-enabled.newsletter-page .edit-link,
.page-template-landing-page-full-width .edit-link {
  position: absolute; }

@media (min-width: 1220px) {
  .page-template-landing-page, .page-template-submenu, .newsletter-header-enabled.tax-issuem_issue, .newsletter-header-enabled.tax-issuem_issue_categories, .newsletter-header-enabled.single-article, .newsletter-header-enabled.newsletter-page,
  .page-template-landing-page-full-width {
    padding-top: 150px; } }

a:focus, a:hover {
  text-decoration: none; }

.entry-content a, .wp-editor a {
  letter-spacing: 1px;
  font-weight: 500; }

.entry-content h2, .wp-editor h2 {
  margin-top: 60px; }
  .entry-content h2:first-child, .wp-editor h2:first-child {
    margin-top: 30px; }

.entry-content h5, .entry-content dt, .wp-editor h5, .wp-editor dt {
  line-height: 24px; }

.entry-content ul li:before, .entry-content ol li:before, .wp-editor ul li:before, .wp-editor ol li:before {
  content: none;
  margin-right: 0; }

.entry-content ul li, .entry-content ol li, .wp-editor ul li, .wp-editor ol li {
  text-transform: none; }

.entry-content ul.big-list a, .entry-content ul.sidenav a, .entry-content ol.sidenav a, .entry-content .single-article .widget-area .widget ul a, .single-article .widget-area .widget .entry-content ul a, .single-article .widget-area .widget .entry-content ol a, .entry-content .single-article .widget-area .widget ol a, .entry-content ol.big-list a, .wp-editor ul.big-list a, .wp-editor ul.sidenav a, .wp-editor ol.sidenav a, .wp-editor .single-article .widget-area .widget ul a, .single-article .widget-area .widget .wp-editor ul a, .single-article .widget-area .widget .wp-editor ol a, .wp-editor .single-article .widget-area .widget ol a, .wp-editor ol.big-list a {
  letter-spacing: 2px;
  text-transform: uppercase; }

.entry-content ol li, .wp-editor ol li {
  list-style-type: decimal; }

.entry-content .img-circle, .wp-editor .img-circle {
  border-radius: 50%; }

.entry-content .img-icon, .wp-editor .img-icon {
  width: 150px;
  height: 150px;
  line-height: 150px;
  font-size: 75px;
  background-color: #a9dcda;
  color: #4c87b5;
  border-radius: 50%;
  text-align: center;
  margin-left: 15px;
  display: none; }
  @media (min-width: 768px) {
    .entry-content .img-icon, .wp-editor .img-icon {
      display: inline-block; } }

.entry-content .img-icon-left, .wp-editor .img-icon-left {
  margin: 0 15px 60px 10px;
  float: left; }

.entry-content .img-icon-nobg, .wp-editor .img-icon-nobg {
  background-color: transparent;
  height: 100px;
  width: 100px;
  margin-bottom: 15px; }

.entry-content .img-icon-alt, .wp-editor .img-icon-alt {
  margin-top: 30px;
  margin-bottom: 15px; }

.entry-content .img-icon-nobottom, .wp-editor .img-icon-nobottom {
  margin-bottom: 0; }

.entry-content .img-icon-spacer, .wp-editor .img-icon-spacer {
  margin: 0;
  width: 0px;
  background-color: transparent; }
  @media (min-width: 1220px) {
    .entry-content .img-icon-spacer, .wp-editor .img-icon-spacer {
      margin: 0 15px 60px 10px;
      width: 150px; } }

.entry-content h2 + div, .wp-editor h2 + div {
  margin-top: 30px; }

.entry-content table, .wp-editor table {
  width: 100%;
  max-width: 100%;
  margin-bottom: 30px; }
  .entry-content table td, .entry-content table th, .wp-editor table td, .wp-editor table th {
    padding: 7.5px 15px;
    vertical-align: top; }
  .entry-content table th, .wp-editor table th {
    border-bottom: 2px solid #ddd; }

.screen-reader-text {
  /*text-indent: -999em;
	display: block;
	margin-bottom: -30px;*/ }

.img-responsive, img.alignnone, img.aligncenter {
  display: block;
  max-width: 100%;
  height: auto; }

/* 
 * Required Core WordPress 
 * https://codex.wordpress.org/CSS
*/
.sticky {
  background-color: #fff;
  padding: 30px; }

figure img {
  max-width: 100%;
  height: auto; }

.alignnone {
  margin: 5px 20px 20px 0; }

.aligncenter,
div.aligncenter {
  display: block;
  margin: 5px auto 5px auto; }

.alignright {
  float: right;
  margin: 5px 0 20px 20px; }

.alignleft {
  width: 100%;
  height: auto; }
  @media (min-width: 480px) {
    .alignleft {
      float: left;
      margin: 5px 20px 20px 0;
      width: auto;
      height: auto;
      max-width: 50%; } }
/* ... */

